@@ -29,6 +29,7 @@ const QString ctn_ROOT_SH("/bin/sh -c ");
 const QString ctn_QSUDO("qsudo");
 
 const QString ctn_KDESU("kdesu");
+const QString ctn_LXQTSU("lxqt-sudo");
 
 const QString ctn_KDE_DESKTOP("kwin");
 const QString ctn_KDE_X11_DESKTOP("kwin_x11");
@@ -111,6 +112,7 @@ public:
 
   static QString getQSUDOCommand();
 
+  static QString getLXQTSUCommand();
   static QString getKDESUCommand();
   static QString getTDESUCommand();
   static QString getGKSUCommand();
